--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,5 +33,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 models:
   my_f1_project:
-    materialized: view
+    +materialized: view
     +post-hook: "{{ set_options(this) }}"
