commit - dbt_expectations 1

--- a/models/f1_config.yml
+++ b/models/f1_config.yml
@@ -20,3 +20,10 @@ sources:
                   severity: error
                   warn_if: "<20" 
                   error_if: ">=20"
+
+models:
+- name: f1_1
+  tests:
+    - dbt_expectations.expect_table_row_count_to_be_between:
+        min_value: 50
+        max_value: 100
